# VAAPI

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/src/: Doxyfile  Readme.md  glslProcedures.cpp  optixAbstractMaterial.cpp  optixAbstractMaterial.h  optixBasicActor.cpp  optixBasicActor.h  optixBasicRenderer.cpp  optixBasicRenderer.h  optixReader.h  optixSDFBasicOperations.cpp  optixSDFBasicOperations.h  optixSDFBasicPrimitives.h  optixSDFGeometry.cpp  optixSDFGeometry.h  renderTypes.h  vaActor.cpp  vaActor.h  vaBaseMapScheme.h  vaBasicObject.cpp  vaBasicObject.h  vaColorScheme.h  vaOpticModel.cpp  vaSoundMapScheme.cpp  vaSoundMapScheme.h  vaWidgetHandle.cpp  vaWidgetHandle.h
src/doc2/core/: CMakeLists.txt
src/doc2/frep/: CMakeLists.txt
src/doc2/html/: _my_assert_8h.html  _my_assert_8h_source.html  _pinhole_camera_8h.html  _pinhole_camera_8h_source.html  _readme_8md.html  _timer_8h.html  _timer_8h__incl.map  _timer_8h_source.html  alltutorials_8md.html  annotated.html  approach_8md.html  class_pinhole_camera-members.html  class_pinhole_camera.html  class_s_d_f_blend_intersection_op-members.html  class_s_d_f_blend_intersection_op.html  class_s_d_f_blend_intersection_op__coll__graph.map  class_s_d_f_blend_intersection_op__inherit__graph.map  class_s_d_f_blend_subtraction_op-members.html  class_s_d_f_blend_subtraction_op.html  class_s_d_f_blend_subtraction_op__coll__graph.map  class_s_d_f_blend_subtraction_op__coll__graph.md5  class_s_d_f_blend_subtraction_op__inherit__graph.map  class_s_d_f_blend_subtraction_op__inherit__graph.md5  class_s_d_f_blend_subtraction_op_a1764adb3f1d0c9656892b429021e909a_cgraph.md5  class_s_d_f_blend_subtraction_op_a31c0b863847f2ef6fb01e6a5b61e0839_cgraph.map  class_s_d_f_blend_subtraction_op_a31c0b863847f2ef6fb01e6a5b61e0839_cgraph.md5  class_s_d_f_blend_union_op-members.html  class_s_d_f_blend_union_op.html  class_s_d_f_blend_union_op__coll__graph.map  class_s_d_f_blend_union_op__coll__graph.md5  class_s_d_f_blend_union_op__inherit__graph.map  class_s_d_f_blend_union_op__inherit__graph.md5  class_s_d_f_blend_union_op_a7bb3b3cee6f90d9628c935c73b68b122_cgraph.map  class_s_d_f_blend_union_op_abced3299069efa34c0ecfc226c58fc05_cgraph.map  class_s_d_f_elongate_op-members.html  class_s_d_f_elongate_op.html  class_s_d_f_elongate_op__coll__graph.md5  class_s_d_f_elongate_op_a2c9b3d00ead87dad354494f1ead225d4_cgraph.map  class_s_d_f_elongate_op_a2c9b3d00ead87dad354494f1ead225d4_cgraph.md5  class_s_d_f_elongate_op_a52c96482dd0b7f28f89f3c99a94fbe35_cgraph.map  (+968 more)
src/doc2/inc/: PinholeCamera.h  predefined.h
src/doc2/latex/: _my_assert_8h.tex  _pinhole_camera_8h.tex  _pinhole_camera_8h__incl.md5  _readme_8md.tex  _timer_8h.tex  _timer_8h__incl.md5  alltutorials_8md.tex  annotated.tex  class_pinhole_camera.tex  class_s_d_f_blend_intersection_op.tex  class_s_d_f_blend_intersection_op__coll__graph.md5  class_s_d_f_blend_intersection_op_a1890190ec127f03bf2c7dc85039a1fa0_cgraph.md5  class_s_d_f_blend_subtraction_op.tex  class_s_d_f_blend_subtraction_op__coll__graph.md5  class_s_d_f_blend_subtraction_op_a1764adb3f1d0c9656892b429021e909a_cgraph.md5  class_s_d_f_blend_subtraction_op_a31c0b863847f2ef6fb01e6a5b61e0839_cgraph.md5  class_s_d_f_blend_union_op.tex  class_s_d_f_blend_union_op__inherit__graph.md5  class_s_d_f_blend_union_op_ac43ae8a56fa616f860c66263ad04381c_cgraph.md5  class_s_d_f_elongate_op.tex  class_s_d_f_elongate_op__inherit__graph.md5  class_s_d_f_rounding_op.tex  class_s_d_f_rounding_op__inherit__graph.md5  class_s_d_f_rounding_op_a066290ccbf37adff7a46598ba39c5deb_cgraph.md5  class_s_d_f_rounding_op_afdb63d252e0ca18b4b0bfaacef0db40b_cgraph.md5  class_s_d_f_subtraction_op.tex  class_s_d_f_subtraction_op__coll__graph.md5  class_s_d_f_subtraction_op_a6b8a29e7d5778d12d7582a4ae93975bc_cgraph.md5  class_timer.tex  classanti_alized_model.tex  classanti_alized_model__coll__graph.md5  classanti_alized_model__inherit__graph.md5  classauditory_mapper.tex  classauditory_mapper_cmaj.tex  classauditory_mapper_cmaj_ab6be59e224e7febcfb6c2694bfbd0d42_cgraph.md5  classauditory_mapper_plucked.tex  classauditory_mapper_plucked__coll__graph.md5  classauditory_mapper_plucked_ae33f0c777dced28e75e705acda8478db_cgraph.md5  classauditory_model.tex  classauditory_model__coll__graph.md5  (+456 more)
src/for documentation/: Doxyfile
src/for documentation/core/: CMakeLists.txt
src/for documentation/html/: _application_8cpp.html  _application_8cpp__incl.map  _application_8cpp__incl.md5  _application__res_8h.html  _application__res_8h__incl.map  _application__res_8h__incl.md5  _application__res_8h_source.html  _my_assert_8h.html  _my_assert_8h__dep__incl.map  _my_assert_8h__dep__incl.md5  _pinhole_camera_8cpp.html  _pinhole_camera_8cpp__incl.map  _sphere_8cpp.html  (+2262 more)
src/frep/: CMakeLists.txt
src/inc/: PinholeCamera.h  macros.h  version_config.h.in
src/shaders/: attributeInfo.h  basic_lights.h  closesthit.cu  intersection_hetero0D.cu  intersection_hetero1D.cu  intersection_hetero4D.cu  intersection_hetero_indexed.cu  intersection_molecules.cu  intersection_molecules4.cu  intersection_molecules4_old.cu  intersection_molecules_res.cu  intersection_sdfPrim.cu  intersection_sdfPrimLib.cu  intersection_sphere_bond.cu  intersection_sphere_indexed.cu  primDesc.h  sdfGeometryVariables.h  sdfPrimPrograms.h  widgets.cu
src/src/: Application.cpp  ExampleConnection.h  PinholeCamera.cpp  Sphere.cpp  itkUtil.cpp  itkUtil.h  main.cpp  optixGeometry.cpp  optixGeometry.h  optixMaterial.cpp  optixMaterial.h  optixWindow.cpp  optixWindow.h  optixXYZReader.cpp  optixXYZReader.h  sdfHeteroGeometry.cpp  sdfHeteroGeometry.h  sdfReader.cpp  sdfReader.h  vaAdvancedRenderer.cpp  vaAdvancedRenderer.h  vaBaseWidget.cpp  vaBaseWidget.h  vaRayCastBaseWidget.cpp  vaRayCastBaseWidget.h  vaRenderer.cpp  vaRenderer.h  volumeRender_copy_comment.cpp
src/tests/: cpp_test.py  math_test.py  test_main.cpp  test_math.cpp
stk-master/: CMakeLists.txt
stk-master/include/: Stk.h
stk-master/src/: Stk.cpp
superbuild/: CMakeLists.txt  External-AL.cmake  External-ALUT.cmake
(+2621 files in other folders)
